--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "turbolinks": "git://github.com/ssorallen/turbolinks"
   },
   "devDependencies": {
+
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.8.0",
-    "webpack": "^1.4.15"
+    "webpack": "^1.4.15",
+    "compression-webpack-plugin": ""
   }
 }
